# learn_tdd

./: pyproject.toml
superlists/: functional_tests.py
superlists/functional_tests/: tests.py
superlists/lists/: tests.py  views.py
superlists/lists/migrations/: 0001_initial.py  0002_item_text.py
superlists/lists/templates/: home.html  list.html
superlists/superlists/: settings.py  urls.py
