[tool.poetry]
name = "tdd"
version = "0.1.0"
description = "learn testing with python, django and selenium"
authors = ["fihyer"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.2"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
